--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@ I successfully completed my B.Tech in Civil Engineering in the year 2025, equipp
 
     <div class="last-text">
 
-        <p>Developed By Karthi....k</p>
+        <p>Developed By Karthik....</p>
 
     </div>
 
